--- a/Cab-Booking-Dapp-main/client/package.json
+++ b/Cab-Booking-Dapp-main/client/package.json
@@ -6,9 +6,13 @@
   "main": "dist/index.js",
   "dependencies": {
     "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "@portis/web3": "^3.0.8",
     "@react-google-maps/api": "^2.1.1",
     "axios": "^0.21.1",
@@ -21,6 +25,7 @@
     "prop-types": "15.7.2",
     "qrcode.react": "^1.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.6.0",
     "react-chartist": "0.14.3",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
