--- a/Cab-Booking-Dapp-main/client/package.json
+++ b/Cab-Booking-Dapp-main/client/package.json
@@ -32,8 +32,8 @@
     "web3": "1.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": " react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
