--- a/Cab-Booking-Dapp-main/client/package.json
+++ b/Cab-Booking-Dapp-main/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.6.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "ethers": "5.4.5",
     "history": "4.10.1",
     "mongoose": "^6.7.2",
     "perfect-scrollbar": "1.5.0",
@@ -30,15 +31,15 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-qr-scanner": "0.0.11",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
     "reactstrap": "^8.9.0",
     "web3": "1.2.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": " react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build --openssl-legacy-provider",
+    "start": "react-scripts start --openssl-legacy-provider",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
@@ -51,7 +52,12 @@
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
-  "keywords": [],
+  "keywords": [
+    "ethereum",
+    "crypto",
+    "eth",
+    "metamask"
+  ],
   "homepage": "https://creativetimofficial.github.io/material-dashboard-react/#/dashboard",
   "optionalDependencies": {
     "@types/googlemaps": "3.39.6",
