--- a/Cab-Booking-Dapp-main/client/package.json
+++ b/Cab-Booking-Dapp-main/client/package.json
@@ -38,8 +38,8 @@
     "web3": "1.2.2"
   },
   "scripts": {
-    "build": "react-scripts build --openssl-legacy-provider",
-    "start": "react-scripts start --openssl-legacy-provider",
+    "build": "react-scripts build ",
+    "start": "react-scripts start ",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
